NativeHTTP By magik6000
For more info visit http://nativehttp.org

1805.13:
-Async file sender
-NativeStat improvements
-Executor clean-up
-64bit integer conversions in SuperString

1105.13:
-Special macros for returning OnLoad status
-Scales on diagrams in NativeStat
-Added few SuperString functions - RE-NAMED SOME OLD!
-Longer data type for statistics
-Fixed connections stats
-Fixed SuperString Destructor

1005.13:
-Custom thread names
-Manager now catch some more signals
-Superstring clean up and few new features
-Fixed manager crash loop
-Fixed crashing on multi-packet POST data when deamonized
-Fixed not flipping hourly stats[probably by accident]

0105.13:
-Option for logging to file
-Crash handler improved

2904.13:
-Makefile bug fixes
-Bug-fixes
-Security in NativeStat

2304.13:
-SSL
-Better memory stats in debug build
-Option for launching with specified configuration file
-Bugfixes

1804.13:
-Now running on BSD sockets
-Prepared for SSL integration
-Few little bug fixes

1604.13:
-Sessions!
-3 superstring functions can be called w/o object
-Few bugfixes

1004.13:
-Stats saving/loading
-Memory usage reduced
-Option to compile debug version
-Debug version prints some memory stats
-Option for async sending
-Few small bugs fixed

0204.13:
-Simple stat module
-Code formatting

3003.13
-New pagemaper
-Bug fixes
-Sqlite

1903.13:
-Bugfixes
-Fixed many memory leaks
-Better stability

1703.13:
-New HTTP engine
-Few bugfixes
-New error pages
-Now on GitHUB
-Much more

-----Older:
version 0, release 3, patch 3(v0r3p3)
-Default Content-tpye can be set in config
-Content type can be set by native pages
-Fixed bug with no 404 error
-Server is demonizing wits '-d' parameter
-Simple statistics of hits[will be expanded]

version 0, release 3, patch 2(v0r3p2)
-Fixed reciving requests with long POST data
-Setting in configuration file to set maximal amount of POST data

version 0, release 3, patch 1(v0r3p1)
-Bug fixes in .nhp parser
-Few bug fixes in page-mapper